--- a/app/views/pins/show.erb
+++ b/app/views/pins/show.erb
@@ -1,5 +1,5 @@
 <div class="header">
-  <h1>
+  <h1><i class="fa fa-laptop"></i>
     <%= "#{@pin.title}" %>
   </h1>
 </div>
@@ -16,6 +16,6 @@
   </p>
 </div>
 <br/>
-<a href="/">
+<a href="/"><i class="fa fa-arrow-left"></i>
   Back to Home
 </a>
