--- a/app/views/pins/index.erb
+++ b/app/views/pins/index.erb
@@ -12,9 +12,9 @@
             <div class="pin-header row">
               
               <div class="logo-thumbnail col-xs-3">
-                  <% if "#{pin.resource_type}" == "rails" %>
+                  <% if "#{pin.category}" == "rails" %>
                   <%= image_tag('rails-logo-thumbnail.png') %>
-                  <% elsif "#{pin.resource_type}" == "ruby" %>
+                  <% elsif "#{pin.category}" == "ruby" %>
                   <%= image_tag('ruby-logo-thumbnail.png') %>
                   <% end %>
                 </div>  
