--- a/app/views/pins/new.erb
+++ b/app/views/pins/new.erb
@@ -1,6 +1,15 @@
 <h1>Add a New Pin!</h1>
+<% if !@errors.nil? %>
+<div class="text-danger">
+    <label><%= pluralize(@errors.count, "error") %> prohibited this pin from being saved:</label>
+    <ul>
+        <% @errors.full_messages.each do |msg| %>
+        <li><%= "#{msg}" %></li>
+    <% end %>
+    </ul>
+</div>
+<% end %>
 
-<form>
 <%= form_for(@pin) do |f| %>
 <div class="form-group">
 <label for="pin_title">Title</label>
@@ -34,4 +43,3 @@
     </div>
 
 <% end %>
-</form>
