--- a/app/views/pins/index.erb
+++ b/app/views/pins/index.erb
@@ -12,10 +12,15 @@
             <div class="pin-header row">
               
               <div class="logo-thumbnail col-xs-3">
-                  <% if pin.category_id == 2 %>
+                  <% if pin.image.exists? %>
+                  <%= image_tag(pin.image.url(:thumb)) %>
+                  <% else %>
+                  
+                  <% if pin.category.name == "rails" %>
                   <%= image_tag('rails-logo-thumbnail.png') %>
-                  <% elsif pin.category_id == 1 %>
+                  <% elsif pin.category.name == "ruby" %>
                   <%= image_tag('ruby-logo-thumbnail.png') %>
+                  <% end %>
                   <% end %>
                 </div>  
                 
