--- a/app/views/pins/show.erb
+++ b/app/views/pins/show.erb
@@ -4,18 +4,21 @@
   </h1>
 </div>
 
-<div class="show-pin">
-  <p><%= "#{@pin.text}" %></p>
-
-  <hr/>
-  <p>
-    <b>Visit <%= "#{@pin.title}" %> at: </b>
-    <a class="url" href="<%= "#{@pin.url}" %>" target="_blank">
-      <%= "#{@pin.url}" %>
-    </a>
-  </p>
+<div class="panel panel-default">
+	<div class="panel-body">
+	  <div class="row">
+		<div class="col-md-1"><img src="<%= @pin.image.url(:thumb) %>" class="img-thumbnail pull-right"></div>
+		<div class="col-md-3"><p><%= "#{@pin.text}" %></p></div>
+	  </div>
+	  <hr/>
+	  <p>
+		<b>Visit <%= "#{@pin.title}" %> at: </b>
+		<%= link_to "#{@pin.url}", "#{@pin.url}", html_options = {target: "_blank", class: "url"} %>
+	  </p>
+	</div>
 </div>
 <br/>
-<a href="/"><i class="fa fa-arrow-left"></i>
+<a href="/">
+	<i class="fa fa-home" aria-hidden="true"></i>
   Back to Home
 </a>
