fixed form formatting

--- a/app/views/pins/_form.erb
+++ b/app/views/pins/_form.erb
@@ -65,7 +65,9 @@
 <div class="form-group">
 			<label for="pin_image" class="col-md-2 control-label">Image</label>
 			<div class="col-md-8">
-        <%= f.file_field :image, class: "form-control" %> 
+                <div class="form-control">
+                <%= f.file_field :image, class: "file-input" %> 
+                </div>
     </div>
    
 </div>
