--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-      <% if !current_user.nil? %>
+      <% if logged_in? %>
       <div class="user pull-right">
       <h3>
           <%= "Hi, #{current_user.first_name}!" %> | <%= link_to "Logout", logout_path(current_user), method: :delete %>
