--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,26 +1,32 @@
 <h1>Log In!</h1>
 
-<%= form_tag :action => "login", :html => {:class => 'col-md-8 form-horizontal'} do %>
-
 <div class="panel">
     <div class="panel-body">
+        <%= form_tag('/login', class: 'col-md-8 form-horizontal') do %>
 <div class="form-group">
-    <%= label_tag :email %><br>
-    <%= email_field_tag :email, params[:email], class: "form-control" %>
+    <label for="email" class="col-md-2 control-label">Email:</label>
+    <div class="col-md-8">
+    <%= email_field_tag :email, nil, placeholder: 'email@example.com', class: "form-control" %>
+    </div>
 </div>
 
 <div class="form-group">
-    <%= label_tag :password %><br>
-    <%= password_field_tag :password, params[:password], class:"form-control" %>
+    <label for="password" class="col-md-2 control-label">Password:</label>
+    <div class="col-md-8">
+    <%= password_field_tag :password, nil, placeholder: 'Password', class: "form-control" %>
+    </div>
 </div>
 
 <div class="form-group">
+    <div class="col-md-8">
     <%= submit_tag "Sign in", class: "btn btn-default" %>
+    </div>
 </div>
         <% if @errors %>
   <div id="error_explanation">
     <h2><%= @errors %></h2>
     </div>
         <% end %>
+            <% end %>
 </div>
-<% end %>
+</div>
